# blinky-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
scripts/: flash.sh  install.sh
