[package]
edition      = "2021"
name         = "blinky-rs"
description  = "ESP32 LED blinky example using Rust"
license      = "MIT"
rust-version = "1.86"
version      = "0.1.0"

[lib]
test = false

[[bin]]
name = "blinky-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] } # ESP-IDF compatible bootloader
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] } # Hardware Abstraction Layer for ESP32

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
